# TAPS-2024-Hackathon

./: .gitignore  README.md  dashboard-2e6b8d5d1ace8971.js  dashboard-2e6b8d5d1ace8971_bg.wasm  dashboard-30006d38a4155bd9_bg.wasm  dashboard-327612cc0eb3c56b.js  dashboard-327612cc0eb3c56b_bg.wasm  dashboard-3fb3c900ccaae4ef.js  dashboard-3fb3c900ccaae4ef_bg.wasm  dashboard-9f7af84eb32f95d7.js  dashboard-9f7af84eb32f95d7_bg.wasm  dashboard-a3fdb722cc2ab207.js  dashboard-a3fdb722cc2ab207_bg.wasm  dashboard-af4c6942f88862b6.js  dashboard-af4c6942f88862b6_bg.wasm  index.html  main-886c6e188ce67239.css  main-a3733f9cc6290ca3.css  simulated_df.xlsx
.github/workflows/: deploy.yml
dashboard/: Cargo.toml  Trunk.toml  index.html  summarized_pr.xlsx  texture_data.csv
dashboard/css/: main.css
dashboard/images/icons/favicons/: THANKYOU.md
dashboard/src/: main.rs
