[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
plotters = "0.3.7"
plotters-canvas = "0.3.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
web-sys = { version = "0.3", features =["HtmlCanvasElement"] }
gloo = "0.11.0"
calamine = "0.26.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
wasm-bindgen-futures = "0.4.45"
tokio = { version = "1.41.0", features = ["rt"] }
js-sys = "0.3.72"
